# tap-snapchat-ads

./: pyproject.toml
tap_snapchat_ads/: auth.py  client.py  streams.py  tap.py
