[project]
name = "tap-snapchat-ads"
version = "0.0.1"
description = "`tap-snapchat-ads` is a Singer tap for SnapchatAds, built with the Meltano Singer SDK."
authors = [{ name = "Gary James" }]
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "ELT",
    "SnapchatAds",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.25.1,<3",
    "pytz",
    "singer-sdk~=0.53.5",
]

[project.optional-dependencies]
s3 = ["fs-s3fs>=1.1.1,<2"]

[project.scripts]
tap-snapchat-ads = "tap_snapchat_ads.tap:TapSnapchatAds.cli"

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7",
    "tox>=3.24.4,<4",
    "flake8>=3.9.2,<4",
    "black>=21.9b0,<22",
    "pydocstyle>=6.1.1,<7",
    "mypy>=0.910,<0.911",
    "types-requests>=2.26.1,<3",
    "isort>=5.10.1,<6",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_snapchat_ads"
